tests/slp3_bad_null_assign.stderr
tests/slp3_bad_null_assign.sl:5:9: error: SL2004: type mismatch
